# Registar

./: .directory  .gitignore  README.md  Registar.pro  Registar.sublime-project
ContoursFromPolyData/: CMakeLists.txt  ContoursFromPolyData.cxx
ELCH/: ELCH.pro  elch.cpp
Liu2014/: Liu2014.pro
Pulli1999/: Pulli1999.pro  main.cpp
Scripts/: .directory  armadillo_remove_edge_too_long_face.mlx  bunny_remove_edge_too_long_face.mlx  compute_normal.mlx  dragon_remove_edge_too_long_face.mlx  happy_remove_edge_too_long_face.mlx  meshlab_compute_normal.py  meshlab_compute_normal_win.py  meshlab_obj2ply.py  meshlab_obj2ply_win.py  meshlab_ply2obj_win.py  meshlab_remove_edge_too_long_face.py  meshlab_remove_edge_too_long_face_win.py  meshlab_remove_unreferenced_vertices_win.py  meshlab_xyz2ply_win.py  remove_unreferenced_vertices.mlx  tang2014_win.py
Sharp2004/: Sharp2004.pro
Tang2014/: SRoMCPS.cpp  SRoMCPS.h  Tang2014.pro  common.h  globalregistration.cpp  globalregistration.h  graph.cpp  graph.h  link.cpp  link.h  loop.cpp  loop.h  main.cpp  pairregistration.cpp  pairregistration.h  scan.cpp  scan.h  tang2014_globalregistration.cpp  test.cpp
VirtualScanner/: .directory  CMakeLists.txt  VirtualScanner.cpp
Williams2001/: SRoMCPS.cpp  SRoMCPS.h  Williams2001.pro
diagram/: diagramwindow.cpp  diagramwindow.h  link.h  node.cpp  node.h
error_estimation/: error_estimation.pro  main.cpp  main_old.cpp  main_old_1.cpp
error_visualization/: error_visualization.pro  main.cpp
frames2tf/: frames2tf.pro  main.cpp
generate_tf_for_stanford/: main.cpp
include/: cloud.h  (+44 more)
(+108 files in other folders)
